--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
+  <!-- AOS Animation Library -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- my style -->
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -47,7 +49,7 @@
 
         <!-- btn dùng thẻ a để đăng ký và đăng nhập -->
         <div class="me-1 mb-2 mb-lg-0 d-flex flex-column gap-1 flex-md-row">
-          <a href="#!" class="btn btn-danger btn-sm d-inline-flex justify-content-center align-items-center">
+          <a href="#!" class="btn btn-primary-gradient btn-sm d-inline-flex justify-content-center align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" class="me-2" viewBox="0 0 640 512">
               <!--Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
               <path fill="#ffffff"
@@ -87,7 +89,7 @@
     <div class="container">
       <!-- contact header -->
       <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="fade-up">
           <div class="py-3 mb-4 text-center">
             <h1 class="fs-3 fw-light">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia
@@ -105,7 +107,7 @@
       <!-- contact content -->
       <div class="row">
         <!-- item 1 -->
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-delay="100">
           <div class="card text-center">
             <div class="card-header">F.A.Q</div>
             <div class="card-body p-5">
@@ -115,9 +117,9 @@
               </p>
             </div>
             <div class="card-footer">
-              <a class="btn btn-success btn-sm d-inline-flex align-items-center" href="./faq.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-question-diamond-fill me-2" viewBox="0 0 16 16">
+                </svg>
+                See FAQ's
+              </a>
                   <path
                     d="M9.05.435c-.58-.58-1.52-.58-2.1 0L.436 6.95c-.58.58-.58 1.519 0 2.098l6.516 6.516c.58.58 1.519.58 2.098 0l6.516-6.516c.58-.58.58-1.519 0-2.098L9.05.435zM5.495 6.033a.237.237 0 0 1-.24-.247C5.35 4.091 6.737 3.5 8.005 3.5c1.396 0 2.672.73 2.672 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.105a.25.25 0 0 1-.25.25h-.81a.25.25 0 0 1-.25-.246l-.004-.217c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.803 0-1.253.478-1.342 1.134-.018.137-.128.25-.266.25h-.825zm2.325 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z">
                   </path>
@@ -129,7 +131,7 @@
         </div>
 
         <!-- item 2 -->
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-delay="200">
           <div class="card text-center">
             <div class="card-header">Regarding the course</div>
             <div class="card-body p-5">
@@ -139,10 +141,9 @@
               </p>
             </div>
             <div class="card-footer">
-              <button class="btn btn-success btn-sm d-inline-flex align-items-center" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-info-circle-fill me-2" viewBox="0 0 16 16">
+                </svg>
+                Get Help
+              </button>
                   <path
                     d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z">
                   </path>
@@ -154,7 +155,7 @@
         </div>
 
         <!-- item 3 -->
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-delay="300">
           <div class="card text-center">
             <div class="card-header">Freelance Project</div>
             <div class="card-body p-5">
@@ -164,9 +165,9 @@
               </p>
             </div>
             <div class="card-footer">
-              <a class="btn btn-success btn-sm d-inline-flex align-items-center" href="#!">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-send-check-fill me-2" viewBox="0 0 16 16">
+                </svg>
+                Send Request
+              </a>
                   <path
                     d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 1.59 2.498C8 14 8 13 8 12.5a4.5 4.5 0 0 1 5.026-4.47L15.964.686Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z">
                   </path>
@@ -404,6 +405,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
