Cập nhật nội dung cho trang chủ và liên hệ

--- a/index.html
+++ b/index.html
@@ -60,25 +60,15 @@
 
           <!-- Btn dùng thẻ a để Đăng ký và Đăng nhập -->
           <div class="me-1 mb-2 mb-lg-0 d-flex flex-column gap-2 flex-md-row">
-            <a
-              href="#!"
-              class="btn btn-danger btn-sm d-inline-flex justify-content-center align-items-center me-2"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 640 512"
-                width="16px"
-                heigth="16px"
-                class="me-2"
-              >
-                <!--Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                <path
-                  fill="#ffffff"
-                  d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304l91.4 0C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7L29.7 512C13.3 512 0 498.7 0 482.3zM504 312l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
-                />
-              </svg>
-              <!-- Phần ghi chú cơ bản -->
-              Sign-up for free</a
-            >
+            <a href="#!" class="btn btn-primary-gradient btn-sm d-inline-flex justify-content-center align-items-center me-2"><svg
+              xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="16px" heigth="16px" class="me-2">
+              <!--Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path fill="#ffffff"
+                d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304l91.4 0C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7L29.7 512C13.3 512 0 498.7 0 482.3zM504 312l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
+            </svg>
+
+            <!-- Phần ghi chú cơ bản -->
+            Sign-up for free</a>
 
             <a
               href="#!"
