--- a/faq.html
+++ b/faq.html
@@ -44,11 +44,11 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./faq.html">FAQ</a>
+            <a class="nav-link active" aria-current="page" href="./faq.html">FAQ</a>
           </li>
 
           <li class="nav-item">
