Update layout and scripts for Project 04

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 
-<body class="bg-light pt-5">
+<body class="pt-5">
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg bg-light border-bottom small fixed-top">
     <div class="container">
