--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body class="bg-light pt-5">
+<body class="pt-5">
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-light border-bottom small fixed-top" aria-label="Main Navigation">
